--- a/css/main.css
+++ b/css/main.css
@@ -178,3 +178,19 @@ input:checked + label + .content {
   display: block ;
 }
 
+/* campus.html */
+
+.info-om-begge-campus{
+  font-size: 1.5rem;
+  text-align: auto;
+  margin-top: .5px;
+  margin-bottom: 5px;
+}
+
+.grid-7{
+  display: grid;
+  column-gap: 5rem;
+  grid-template-columns: 3fr 1fr;
+  padding: 1rem;
+  line-height: 1.2;
+}
