--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 
 .banner-container {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: 3fr 1fr;
   gap: 20px;
   background-color: #ffd500;
   padding-top: 0;
@@ -20,6 +20,48 @@ body {
   padding: 10px 0;
   font-size: 20px;
 }
+
+/* Dropdown Button */
+.dropdown-button{
+  display: grid;
+  background-color: #ffd500;;
+  color: black;
+  padding: 10px;
+  font-size: 20px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color:#ffd500; ;
+  min-width: 160px;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #d9b607;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #d9b607;}
 
 .heading-container {
   display: grid;
@@ -84,7 +126,6 @@ body {
 .amount-master-studies {
   border-top: 1px solid black;
 }
-
 
 /* topical.html */ 
 
