--- a/css/campus.css
+++ b/css/campus.css
@@ -7,15 +7,13 @@
   text-align: auto;
   margin-top: .5px;
   margin-bottom: 30px;
+  align-items: under;
 }
 
-.grid-5{
-
+.grid-7{
+  grid-template-rows: 1fr 1fr;
 }
 
-.grid-6{
-
-}
 
 input{
   display: none;
