--- a/css/main.css
+++ b/css/main.css
@@ -366,7 +366,6 @@ input:checked + label + .content {
 .kort-info{
   display: inline;
   border-top: 0.5px;
-  
 }
 
   .bilde-pilestredet{
@@ -401,6 +400,46 @@ input:checked + label + .content {
   padding: 1rem;
 }
 
+/*accessibility.html*/
+.grid-9{
+  /*Vi velger å bruke flex display på denne siden for å vise at dette også er et alternativ
+  når man styler en nettside med CSS. Flex gjør litt det samme som grid-verdigen, men ....*/
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.accessibilitytest-tekst{
+  font-size: 20px;
+  padding-left: 20px;
+  order: 0;
+  flex: 50%;
+  width: 75%;
+  float: left;
+  text-align: left;
+}
+
+.accessibilitytest-bilde{
+  flex-basis: 70%;
+  order: 2;
+  flex: 80%;
+  width: 25%;
+  float: left;
+  align-items: left;
+}
+
+.accessibility-test-campus{
+  max-width: 50%;
+  
+}
+
+@media (max-width: 800px) {
+  .grid-9{
+    flex-direction: column;
+  }
+  
+}
 
 /*Styling av footeren vi skal ha på alle sidene våre*/
 
