--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ body {
   padding: 10px;
   font-size: 20px;
   border: none;
+  /*The cursor tag changes the cursor from an arrow to a hand/pointer*/
   cursor: pointer;
 }
 
