--- a/css/main.css
+++ b/css/main.css
@@ -210,6 +210,39 @@ input:checked + label + .content {
   text-decoration: none;
 }
 
+/* This is the link to the original photo and this styles the text "Foto: Benjamin A. Ward" */
+.heading-grid,
+.opptakskrav,
+.java,
+.programmeringsspråk {
+  font-weight: bolder;
+  text-decoration: underline;
+  padding-top: 10px;
+}
+
+/* This styles the look of the link while you hover over it */
+.heading-grid:hover,
+.opptakskrav:hover,
+.java:hover,
+.programmeringsspråk:hover {
+  font-weight: bolder;
+  cursor: pointer;
+  color: black;
+  text-decoration: underline;
+}
+
+/* This styles how the link looks when you've clicked on it */
+.heading-grid:active,
+.heading-grid:visited, 
+.opptakskrav:active,
+.opptakskrav:visited,
+.java:active,
+.java:visited,
+.programmeringsspråk:active,
+.programmeringsspråk:visited {
+  color: black;
+  text-decoration: underline;
+}
 /* This is the styling of the grid containing the statistics */
 .statistics-grid-container {
   display: grid;
