--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 /* Body */
 /* This targets all the pages, styling the font and the height between lines */
 body {
@@ -15,10 +14,11 @@ p {
   margin-left: 20px;
 }
 
-/* This is styled with a different margin size to the other paragraphs */
-/* This lies inside an 'unordered list', and we need to style it individually to make sure it looks ok */
-.sub-heading-learning-outcomes {
-  margin-left: 5px;
+/* This styles the attribute tags */ 
+a {
+  text-decoration: none;
+  color: black;
+  transition: 0.15s;
 }
 
 /* Banners */
@@ -115,7 +115,6 @@ the right distance from the text.*/
   font-size: 20px;
 }
 
-
 /* This targets the main heading in all the pages, to have a coercive design through the webpage*/
 .main-heading {
   box-sizing: border-box;
@@ -139,6 +138,7 @@ input {
 }
 
 label {
+  border: .5px solid #dab914;
   display: block;
   padding: 8px 22px;
   /* When you hover over the box the cursor turns into a pointer */
@@ -146,6 +146,7 @@ label {
   background: #ffd500;
   color: black;
   position: relative;
+  margin-bottom: 5px;
   /*The background of the box is styled to match the rest of the webpage with yellow boxes with black text
   We chose to position it relative so they would cover the whole page and be center*/
 }
@@ -184,7 +185,6 @@ input + label + .content {
 input:checked + label + .content {
   display: block;
 }
-
 
 /*Index.html*/
 
@@ -276,7 +276,6 @@ input:checked + label + .content {
   border-top: 1px solid black;
 }
 
-
 /* topical.html */ 
 
 /* This is the grid for the course description */
@@ -299,6 +298,30 @@ input:checked + label + .content {
   border-top: 1px solid black;
 }
 
+/* This is a button */
+.arrays-button {
+  background-color: #ffd500;
+  border-color: #a38f2e;
+  border: 2px;
+  /* This rounds the edges of the button */
+  border-radius: 15px;
+  color: black;
+  height: 30px;
+  width: 80px;
+  cursor: pointer;
+  font-weight: bold;
+  box-shadow: 8px 3px 10px rgba(0,0,0,0.2);
+}
+
+.arrays-button:hover {
+  background-color: #a38f2e;
+  opacity: 0.8;
+}
+
+.arrays-button:active,
+.arrays-button:visited {
+  background-color: #ffd500;
+}
 
 /* campus.html */
 
@@ -385,7 +408,6 @@ with the same distance from the text and have the same border around them.*/
     font-size: smaller;
   }
 
-
 /*accessibility.html*/
 
 div.accessibility-test-bildeslideshow{
@@ -428,7 +450,6 @@ div.beskrivelse-av-bildet{
  flex: 1 1 50%;
  word-break: break-word;
 }
-
 
 
 /*This styles the look of the footer which contains links to the sources used for the text on the page
